--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,12 @@ memo/
 static/uploads/*
 !.gitkeep
 memo/
+memo*
 models/YAD2K
 models/Mask_RCNN
 config.yml
 test_image
 zappa_settings.json
+config
+credentials
+
